--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
-body{
-    text-align: center;
+body {
+
+    height: 800px;
+    width: 800px;
+
+}
+
+#gameboard {
+    border: 3px solid black;
+    height: 500px;
+    width: 500px;
+
 }
